# PyFlowETL

./: .gitignore  LICENSE  README.md  main.py  main_5M_mail.py  main_860k.py  main_L2.py  main_L3.py  main_L4.py  main_pdr.py  main_pod.py  main_stefania.py  main_uscenti.py  pyproject.toml  requirements.txt  setup.py
GUI/FlowGui/: FlowGui.sln
GUI/FlowGui/FlowGui/: FlowGui.csproj  MainForm.Designer.cs  MainForm.cs  Program.cs
GUI/FlowGui/FlowGui/App/: AutoSetup.cs  JobDefinition.cs  JobParameter.cs  LogManager.cs
GUI/FlowGui/FlowGui/jobs/860K/: job.yaml  run.py
jobs/LmToPlenitude/: run.py
pyflowetl/: log.py  pipeline.py
pyflowetl/data/: gi_comuni_cap.csv
pyflowetl/extractors/: csv_extractor.py
pyflowetl/loaders/: csv_loader.py  postgres_loader.py
pyflowetl/transformers/: add_provincia.py  add_random_ip.py  add_regione.py  add_regione_from_sigla.py  apply_preprocessing_rules.py  concat_columns.py  convert_date_format.py  extract_cap_from_address.py  ips.csv  set_output_columns.py  validate_columns.py
pyflowetl/validators/: codice_fiscale.py  is_email.py
