[project]
name = "pyflowetl"
version = "0.1.0"
description = "Un framework ETL modulare e leggibile in Python"
authors = [
    { name = "Marco Zamparelli", email = "marco.zamparelli@libero.it" }
]
readme = "README.md"
requires-python = ">=3.8"

license = { file = "LICENSE" }

dependencies = [
    "pandas",
    "openpyxl",
    "psutil"
]

[project.urls]
Homepage = "https://github.com/tuo-utente/pyflowetl"
Repository = "https://github.com/tuo-utente/pyflowetl"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
